[package]
name = "toy_tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
mini_tokio = { path = "../mini_tokio" }
tokio = { workspace = true, features = ["rt", "macros", "time"] }